Fix ScrollBar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -8,6 +8,7 @@
   .admin-content {
     width: 100%;
     .admin-main {
+      height: calc(100vh - 40px);
       .user-paginaion {
         display: flex;
         justify-content: center;
